remove backup for second fits server

--- a/etc/logrotate.conf
+++ b/etc/logrotate.conf
@@ -3,7 +3,7 @@ weekly
 minsize 10M
 
 # Create new (empty) log files after rotating old ones
-create 644 medusa medusa
+create 644 lib-medusa-collectionregistry lib-medusa-collectionregistry
 
 # Keep log files for 8 weeks
 rotate 8
@@ -62,8 +62,9 @@ compress
     notifempty	
     size 100M
 }
-/home/lib-medusa-collectionregistry/ruby-fits-server-2/log/ruby-fits-server.log {
-    missingok
-    notifempty	
-    size 100M
-}
+
+# /home/lib-medusa-collectionregistry/ruby-fits-server-2/log/ruby-fits-server.log {
+#     missingok
+#     notifempty	
+#     size 100M
+# }
