Enhance template with additional fields. Fix one typo.

--- a/env.sh.template
+++ b/env.sh.template
@@ -10,7 +10,7 @@ export MEDUSA_STORAGE=/media/medusa
 export DATABANK_STORAGE=/media/databank
 
 export BACKUP_STORAGE_ROOT=$MEDUSA_STORAGE/backup
-export BACKUP_GLACIER_ROOT=/$HOME/medusa-glacier
+export BACKUP_GLACIER_ROOT=$HOME/medusa-glacier
 export BACKUP_MEDUSA_SHARED_ROOT=$CAPISTRANO_DIR/shared
 
 export FITS_BATCH_SIZE=20000
@@ -21,3 +21,7 @@ export FIXITY_BATCH_SIZE=20000
 export FIXITY_SERVER_HOME=$HOME/medusa-fixity
 
 export GLACIER_HOME=$HOME/medusa-glacier
+
+export MONIT_CONTACT="hding2@illinois.edu"
+export MONIT_MAILSERVER="express-smtp.cites.uiuc.edu"
+export USER=medusa
