remove more references to rclone mount

--- a/env.sh.template
+++ b/env.sh.template
@@ -22,15 +22,7 @@ export FIXITY_SERVER_HOME=$HOME/medusa-fixity
 
 export GLACIER_HOME=$HOME/medusa-glacier
 
-export MONIT_CONTACT="hding2@illinois.edu"
+export MONIT_CONTACT="mfall3@illinois.edu"
 export MONIT_MAILSERVER="express-smtp.cites.uiuc.edu"
 export USER=medusa
 
-#rclone should be configured to have this remote. We should eventually
-#be able to do that with IAM roles and in that case to simply 
-#copy a correct config file. For now, do by hand. 
-export RCLONE_REMOTE=medusa-user
-export RCLONE_BUCKET=medusa-main
-export RCLONE_MOUNTPOINT="$HOME/mnt/$RCLONE_BUCKET-ro"
-export RCLONE_PIDDIR=$HOME/run
-export RCLONE_PIDFILE=$RCLONE_PIDDIR/rclone.pid
