--- a/env.sh.template
+++ b/env.sh.template
@@ -2,7 +2,7 @@
 
 export CAPISTRANO_DIR=$HOME/medusa-cr-capistrano
 
-export RAILS_ENV=production
+export RAILS_ENV=development
 export MEDUSA_DIR=$HOME/medusa
 export MEDUSA_HOME=$HOME/medusa
 
